Switched to GRUB, GNU Toolchain integration with OS

--- a/OS/Makefile
+++ b/OS/Makefile
@@ -8,5 +8,8 @@ all: $(OS_OBJS)
 $(BUILD_DIR)/%.o: %.asm
 	nasm -f bin $< -o $@
 
+$(OS): $(OS_OBJS)
+	ld -m elf_i386 -nmagic -Tos.lds $(OS_OBJS) -o $@
+
 clean:
 	rm $(BUILD_DIR)/*
